Fix Build spacing properly and adjust mega menu spacing

--- a/src/theme/NavbarItem/styles.css
+++ b/src/theme/NavbarItem/styles.css
@@ -32,6 +32,11 @@
   border-color: #1A2334;
 }
 
+.mega-dropdown__col {
+  display: flex;
+  align-items: stretch;
+}
+
 .mega-dropdown__label {
   display: flex;
   align-items: flex-end;
@@ -39,8 +44,8 @@
   color: var(--ifm-color-gray-500);
   font-family: Metropolis Bold;
   font-size: 0.825rem;
-  height: 100%;
-  padding: 1.5rem 0.25rem 0.8rem 0.5rem;
+  padding: 0.25rem 0.5rem;
+  margin: 0.2rem 0;
   white-space: nowrap;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -50,13 +55,9 @@
   color: var(--ifm-color-gray-600);
 }
 
-.dropdown {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
 .dropdown__link {
-  margin:0.2rem 0
+  width: 100%;
+  margin: 0.2rem 0
 }
 
 .link {
@@ -76,11 +77,11 @@
 
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
-  
+
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+
   width: 2.5rem;
   height: 2.5rem;
 }
